--- a/package.json
+++ b/package.json
@@ -3,18 +3,59 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "nodemon",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production node dist/server.js"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.8.8",
+    "@pothos/core": "^3.3.3",
+    "@pothos/plugin-scope-auth": "^3.4.2",
+    "@pothos/plugin-simple-objects": "^3.0.3",
+    "@pothos/plugin-validation": "^3.0.2",
+    "apollo-server-core": "^3.6.5",
+    "apollo-server-express": "^3.6.5",
+    "apollo-server-micro": "^3.6.5",
+    "axios": "^0.26.0",
+    "clsx": "^1.1.1",
+    "express": "^4.17.3",
+    "framer-motion": "^6.2.8",
+    "graphql": "^16.3.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-upload": "^13.0.0",
+    "graphql-ws": "^5.6.3",
+    "micro": "^9.3.4",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.27.1",
+    "ws": "^8.5.0",
+    "zod": "^3.14.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/graphql-upload": "^8.0.11",
+    "@types/node": "^17.0.22",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^17.0.13",
+    "@types/ws": "^8.5.3",
+    "autoprefixer": "^10.4.2",
+    "concurrently": "^7.0.0",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "husky": "^7.0.4",
+    "nodemon": "^2.0.15",
+    "postcss": "^8.4.8",
+    "prettier": "^2.6.0",
+    "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.0.23",
+    "ts-node": "^10.7.0",
+    "typescript": "4.6.2"
   }
 }
