--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon",
+    "dev": "yarn dev:next & yarn dev:api",
+    "dev:next": "next dev",
+    "dev:api": "nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/server.js"
+    "start": "NODE_ENV=production node dist/server.js",
+    "gen:dev": "graphql-codegen --watch",
+    "gen": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -56,6 +60,9 @@
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
-    "typescript": "4.6.2"
+    "typescript": "4.6.2",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "^2.4.7",
+    "@graphql-codegen/typescript-operations": "^2.3.4"
   }
 }
