--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "zod": "^3.14.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "^2.4.7",
+    "@graphql-codegen/typescript-operations": "^2.3.4",
     "@types/express": "^4.17.13",
     "@types/graphql-upload": "^8.0.11",
     "@types/node": "^17.0.22",
     "@types/react": "^18.0.5",
-    "@types/react-dom": "^17.0.13",
+    "@types/react-dom": "^18.0.1",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
@@ -60,9 +63,6 @@
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
-    "typescript": "4.6.2",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typescript": "^2.4.7",
-    "@graphql-codegen/typescript-operations": "^2.3.4"
+    "typescript": "4.6.3"
   }
 }
