--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "yarn dev:next & yarn dev:api",
     "dev:next": "next dev",
-    "dev:api": "nodemon",
+    "dev:api": "nodemon & yarn gen:dev",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "NODE_ENV=production node dist/server.js",
     "gen:dev": "graphql-codegen --watch",
@@ -39,6 +39,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.27.1",
+    "uuid": "^8.3.2",
     "ws": "^8.5.0",
     "zod": "^3.14.2"
   },
@@ -51,6 +52,7 @@
     "@types/node": "^17.0.22",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/uuid": "^8.3.4",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
