--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "graphql-upload": "^13.0.0",
     "graphql-ws": "^5.6.3",
     "micro": "^9.3.4",
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "next": "^12.1.5",
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
     "uuid": "^8.3.2",
     "ws": "^8.5.0",
@@ -50,8 +50,8 @@
     "@types/express": "^4.17.13",
     "@types/graphql-upload": "^8.0.11",
     "@types/node": "^17.0.22",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/uuid": "^8.3.4",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.2",
