try to fix pb on call

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_ENDPOINT='http://localhost:3001/api/graphql'
 NEXT_PUBLIC_API_WEBSOCKET_ENDPOINT='ws://localhost:3001/api/graphql'
+
+NODE_ENV=production
