--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_ENDPOINT='http://localhost:3001/api/graphql'
-NEXT_PUBLIC_API_WEBSOCKET_ENDPOINT='ws://localhost:3001/api/graphql'
+NEXT_PUBLIC_API_ENDPOINT='https://graphrtc.herokuapp.com/api/graphql'
+NEXT_PUBLIC_API_WEBSOCKET_ENDPOINT='wss://graphrtc.herokuapp.com/api/graphql'
 
 NODE_ENV=production
