change to bulk send iceCandidates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "noEmit": true,
     "incremental": true,
     "esModuleInterop": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
