--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-use": "^17.3.2",
     "uuid": "^8.3.2",
     "ws": "^8.5.0",
     "zod": "^3.14.2"
