--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn dev:next & yarn dev:api",
+    "dev": "wireit",
     "dev:next": "next dev",
     "dev:api": "nodemon & yarn gen:dev",
     "build": "next build && tsc --project tsconfig.server.json",
@@ -11,38 +11,46 @@
     "gen:dev": "graphql-codegen --watch",
     "gen": "graphql-codegen"
   },
+  "wireit": {
+    "dev": {
+      "dependencies": [
+        "dev:next",
+        "dev:api",
+        "gen:dev"
+      ]
+    }
+  },
   "dependencies": {
-    "@apollo/client": "^3.6.1",
+    "@apollo/client": "^3.6.9",
     "@chakra-ui/react": "^1.8.6",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@headlessui/react": "^1.6.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@hookform/resolvers": "^2.8.8",
-    "@pothos/core": "^3.10.0",
-    "@pothos/plugin-scope-auth": "^3.8.1",
-    "@pothos/plugin-simple-objects": "^3.0.3",
-    "@pothos/plugin-validation": "^3.0.2",
-    "apollo-server-core": "^3.6.5",
-    "apollo-server-express": "^3.6.5",
-    "apollo-server-micro": "^3.6.5",
-    "axios": "^0.26.0",
-    "clsx": "^1.1.1",
+    "@hookform/resolvers": "^2.9.7",
+    "@pothos/core": "^3.20.0",
+    "@pothos/plugin-scope-auth": "^3.13.0",
+    "@pothos/plugin-simple-objects": "^3.5.0",
+    "@pothos/plugin-validation": "^3.7.0",
+    "apollo-server-core": "^3.10.2",
+    "apollo-server-express": "^3.10.2",
+    "apollo-server-micro": "^3.10.2",
+    "clsx": "^1.2.1",
     "express": "^4.18.1",
     "framer-motion": "^6.3.3",
-    "graphql": "^16.4.0",
+    "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^13.0.0",
-    "graphql-ws": "^5.8.1",
-    "micro": "^9.3.4",
-    "next": "^12.1.5",
+    "graphql-ws": "^5.10.1",
+    "micro": "^9.4.1",
+    "next": "^12.2.5",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.27.1",
-    "react-use": "^17.3.2",
+    "react-hook-form": "^7.34.2",
+    "react-use": "^17.4.0",
     "uuid": "^8.3.2",
-    "ws": "^8.5.0",
-    "zod": "^3.14.2"
+    "ws": "^8.8.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
@@ -66,6 +74,7 @@
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "wireit": "^0.7.1"
   }
 }
